k8s/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-service
  namespace: prod
spec:
  selector:
    app: orchestrator
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-fluent-bit-service
  namespace: prod
spec:
  selector:
    app: orchestrator
  ports:
    - name: tcp
      protocol: TCP
      port: 24220
      targetPort: 24224
    - name: udp
      protocol: UDP
      port: 24220
      targetPort: 24224
  type: NodePort
